<resources>
    <string name="app_name">Стома</string>
    <string name="navigation_home">Главная</string>
    <string name="navigation_appointment">Запись</string>
    <string name="navigation_magazine">Журнал</string>
    <string name="navigation_menu">Меню</string>
    <string name="doctor_and_services">Врачи и услуги</string>
    <string name="personal_room">Личный кабинет</string>
    <string name="chat_with_operator">Чат с оператором</string>
    <string name="make_an_appointment">Записаться на прием</string>
    <string name="logbook_write">Журнал Записей</string>
    <string name="notification">Уведомления</string>

    <string name="welcome">Добро пожаловать!</string>
    <string name="enter_user_name">Имя</string>
    <string name="birthday">День Рождение</string>
    <string name="fio">Ф.И.О</string>
    <string name="save">Сохранить</string>
    <string name="telephone_number">Номер телефона</string>
    <string name="ok">Хорошо</string>
    <string name="exit">Выйти</string>
    <string name="conformed_telephone_number">Подтвердите номер телефона чтобы ввести пароль</string>
    <string name="enter_user_lastname">Фамилия (необязательно)</string>
    <string name="continue_">Продолжить</string>
    <string name="skip">Введу данные позже</string>

    <string name="error_phone_number">Номер телефона введен не верно</string>

    <string name="auth_success">Вы успешно зарегистрировались поздравляю</string>
    <string name="sign_out_from_account">Выйти из аккаунта</string>
    <string name="put_auth_code">Введите код который регистрации</string>
    <string name="check">Проверить</string>
    <string name="put_your_phone_number">Введите свой номер телефона</string>
    <string name="step_one">Шаг 1</string>
    <string name="step_second">Шаг 2</string>
    <string name="step_third">Шаг 3</string>
    <string name="by_doctor">Врачи</string>
    <string name="services">Услуги</string>
    <string name="appearance">Описание</string>
    <string name="branch_adult">Взрослое отделение</string>
    <string name="branch_kids">Детское отделение</string>
    <string name="doctors">Врачи</string>
    <string name="error_when_we_try_get_appearance_category">Ошибка загрузки данных отделения</string>
    <string name="pass">Введите пароль</string>
    <string name="conform_pass">Подтверждение пароля</string>
    <string name="user_name">Имя</string>
    <string name="logo">Логотип</string>
    <string name="auth">Регистрация</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_password">Войти с помощью пароля</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="title_activity_plug">PlugActivity</string>
    <string name="operator_call">Вам позвонит оператор чтобы подтвердить номер телефона</string>
    <string name="online_chat">Чат с оператором</string>
</resources>