<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.menu.profile.ProfileFragment">


    <Toolbar
        android:id="@+id/toolbar"
        style="@style/tab_layout">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/back_button_toolbar"
            style="@style/tab_layout_back_button" />

        <TextView
            style="@style/tab_layout_title_text"
            android:text="@string/personal_room" />
    </Toolbar>

    <View style="@style/tab_layout_bottom_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/fio_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/little_black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            tools:text="Татьяна Александровна Б." />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_fio_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_upper_little"
            android:hint="@string/fio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fio_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:text="Барашних Х Х " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_text_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_upper_little"
            android:hint="@string/birthday">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                tools:text="00.00.00" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_text_telephone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_upper_little"
            android:allowClickWhenDisabled="false"
            android:hint="@string/telephone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_telephone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/conformed_telephone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            android:text="Подтвердить номер телефона"
            android:textAllCaps="false"
            android:textColor="@color/blue_text_button"
            android:layout_gravity="end
"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_upper_little">

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/margin_upper_little"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toTopOf="@id/exit_button"
                />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="match_parent"
                android:backgroundTint="@color/red_background"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/exit"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</LinearLayout>